# solana-crash-game-smart-contract

./: .gitpod.yml  Anchor.toml  Cargo.toml  README-GITPOD.md  README.md  TOKEN-INSTRUCTIONS.md  admin_cli_guide.md  create-repo.ps1  devcontainer-readme.md  idl.json  package.json  project_structure.txt  project_summary.md  run-tests.sh  tsconfig.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-start.sh
programs/crash_game/: Cargo.toml
programs/crash_game/src/: lib.rs
tests/: admin.json  crash_game.ts  test-output.txt
