[package]
name = "crash_game"
version = "0.1.0"
description = "Solana Crash Game Vault System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crash_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0" 